<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.joncairo.android.todo.MainActivity" >

    <item
        android:id="@+id/email_all"
        android:orderInCategory="100"
        android:title="@string/email_all"/>

    <item
        android:id="@+id/email_all_todos"
        android:orderInCategory="100"
        android:title="@string/email_todos"/>

    <item
        android:id="@+id/email_all_archived"
        android:orderInCategory="100"
        android:title="@string/email_archived"/>

    <item
        android:id="@+id/total_todos"
        android:orderInCategory="100"
        android:title="@string/total_todos"/>

    <item
        android:id="@+id/total_checked_todos"
        android:orderInCategory="100"
        android:title="@string/total_checked_todos"/>

    <item
        android:id="@+id/total_unchecked_todos"
        android:orderInCategory="100"
        android:title="@string/total_unchecked_todos"/>

    <item
        android:id="@+id/total_archived"
        android:orderInCategory="100"
        android:title="@string/total_archived"/>

    <item
        android:id="@+id/total_checked_archived"
        android:orderInCategory="100"
        android:title="@string/total_checked_archived"/>
  
    <item
        android:id="@+id/total_unchecked_archived"
        android:orderInCategory="100"
        android:title="@string/total_unchecked_archived"/>
    

</menu>
